- Target release - v-0.22 ----------------------- - [DONE] 350. FIX sudden tag lost bug (it is due to add new recipient feature) - [DONE] 352. Fix HTTP forwarded for header for getting the real user - [DONE] 353. On mobile version restaurant details page "add review" should have "Show reviews" and "add review" - [DONE] 347. Filter nearby restaurants by mobile location if browsed from mobile

--- a/public/stylesheets/fresh/site.mobile.css
+++ b/public/stylesheets/fresh/site.mobile.css
@@ -241,7 +241,6 @@ textarea {
 
 .tbl_reviews tr td {
   margin-bottom: 10px;
-
 }
 
 .tbl_reviews tr td .review .content p {
@@ -325,11 +324,20 @@ textarea {
 }
 
 .popup_message {
-  background: #daa520;
-  padding: 10px;
+  background: none repeat scroll 0 0 red;
+  border-bottom: 4px solid #000000;
+  color: #FFFFFF;
   margin: 0 auto;
+  opacity: 0.8;
+  padding: 10px;
+  text-align: center;
+  width: 100%;
 }
 
 .popup_message h1 {
   border-bottom: 0;
+}
+
+.popup_message a {
+  color: yellow;
 }
